# MARK

./: .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml
backend/: alembic.ini  pyproject.toml
backend/mark_agents/: __init__.py  briefing_handlers.py  cam_context.py  capabilities.py  chat_reply.py  chat_result.py  chat_tools.py  commander.py  education.py  intent.py  llm.py  persona.py  request_router.py  task_report_context.py  task_result.py
backend/mark_agents/roles/: __init__.py  browser.py  coding.py  finance.py  memory_agent.py  planner.py  research.py  verification.py
backend/mark_api/: __init__.py  main.py  websocket.py
backend/mark_api/routes/: agents.py  approvals.py  auth.py  chat.py  health.py  integrations.py  logs.py  media.py  memory.py  objectives.py  sessions.py  skills.py  tasks.py  voice.py
backend/mark_core/: __init__.py  auth.py  config.py  db.py  events.py  models.py  safety.py  task_reports.py  tasks.py  worker.py  ws_bus.py
backend/mark_memory/: __init__.py  embeddings.py  qdrant_client.py  service.py
backend/mark_skills/: __init__.py  cam.py
backend/mark_tools/: __init__.py  browser.py  builtin.py  github.py  image_search.py  market.py  mcp_host.py  open_browser.py  registry.py  sandbox.py  search.py  supervised_actions.py  visualize.py  visualize_templates.py  web_briefing.py
backend/mark_voice/: __init__.py  stt.py  tts.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  (+1 more)
backend/scripts/: seed_owner_profile.py
backend/tests/: test_request_router.py
scripts/: start.sh  (+1 more)
(+12 files in other folders)
