[project]
name = "mark-backend"
version = "0.1.0"
description = "MARK autonomous AI operating system backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "websockets>=13.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "aiosqlite>=0.20.0",
  "redis>=5.2.0",
  "qdrant-client>=1.12.0",
  "langgraph>=0.2.60",
  "langchain-openai>=0.3.0",
  "langchain-core>=0.3.0",
  "httpx>=0.28.0",
  "playwright>=1.49.0",
  "mcp>=1.1.0",
  "pydantic-settings>=2.6.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.18",
  "elevenlabs>=1.50.0",
  "openai>=1.58.0",
  "greenlet>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8.0"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mark_*"]
